# OptViz

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
lr/: data_gen.py  launch_train.sh  launch_viz.sh  model.py  train.py  viz.py
lr/assets/: params.csv
lr/ego_viz/: .gitignore  CMakeLists.txt  build.sh  ego_viz.code-workspace
lr/ego_viz/godot/: debug_terrain.gd  debug_terrain.gd.uid  debug_terrain.tscn  ego_actor.gd  ego_actor.gd.uid  extension.gdextension  extension.gdextension.uid  main.tscn  project.godot  test.tscn
lr/ego_viz/godot/.godot/: extension_list.cfg
lr/ego_viz/godot/.godot/editor/: editor_layout.cfg  filesystem_cache10  filesystem_update4  main.tscn-editstate-3070c538c03ee49b7677ff960a3f5195.cfg  project_metadata.cfg  quick_open_dialog_cache.cfg
lr/ego_viz/godot/assets/: mock_terrain.csv  mock_terrain_metadata.json  mock_trajectory.csv  trajectory.csv
lr/ego_viz/godot/libego_viz.framework/: libego_viz
lr/ego_viz/godot/libego_viz.framework/Versions/A/Resources/: Info.plist
lr/ego_viz/src/: ego_actor.cpp  ego_actor.h  register_types.cpp  register_types.h  terrain_mesh.cpp  terrain_mesh.h
lr/ego_viz/test/: CMakeLists.txt  run_test.sh  test_terrain.cpp
lr/test/: mock_terrain_generator.py
